feat: implement AI-assisted commit message generation
- Remove "review" script from package.json to streamline commands
- Add new command modules for generating commit messages
- Introduce AI-assisted message generation functionality in action.ts
- Create command setup for message generation in message.ts
- Adjust unified option default value in review.ts
- Register createMessageCommand in main application entry point

--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "scripts": {
     "start": "bun run ./src/index.ts",
     "postbuild": "npx rexreplace '^(#!.+\\n)?' '$1import { createRequire as createImportMetaRequire } from \"module\"; import.meta.require ||= (id) => createImportMetaRequire(import.meta.url)(id);\\n' -GM ./bin/index.js",
-    "build": "bun build --target node ./src/index.ts --outdir ./bin --splitting",
-    "review": "bun run ./src/index.ts review"
+    "build": "bun build --target node ./src/index.ts --outdir ./bin --splitting"
   },
   "bin": {
     "commitgenie": "./bin/index.js"
