--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "commitgenie",
+  "version": "0.0.1",
   "scripts": {
     "start": "bun run ./src/index.ts",
-    "postbuild": "npx rexreplace '^(#!.+\\n)?' '$1import { createRequire as createImportMetaRequire } from \"module\"; import.meta.require ||= (id) => createImportMetaRequire(import.meta.url)(id);\\n' -GM ./bin/index.js",
-    "build": "bun build --target node ./src/index.ts --outdir ./bin --splitting"
+    "build": "bun build --target node ./src/index.ts --outdir ./bin --splitting --minify"
   },
+  "type": "module",
   "bin": {
     "commitgenie": "./bin/index.js"
   },
