chore: update package name and version in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "commitgenie",
-  "version": "0.0.2",
+  "name": "@tsungtanglee/commitgenie",
+  "version": "0.0.1",
   "scripts": {
     "start": "bun run ./src/index.ts",
     "build": "bun build --target node ./src/index.ts --outdir ./bin --splitting --minify"
@@ -14,8 +14,8 @@
     "bin"
   ],
   "devDependencies": {
-    "bun-types": "latest",
-    "@types/node": "^20.0.0"
+    "@types/node": "^20.0.0",
+    "bun-types": "latest"
   },
   "dependencies": {
     "@langchain/core": "^0.3.0",
