--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "bun run ./src/index.ts",
     "build": "bun build --target node ./src/index.ts --outdir ./bin --splitting --minify",
-    "publish": "npm publish"
+    "release": "npm run build && npm version patch && npm publish && git push --follow-tags"
   },
   "type": "module",
   "bin": {
